--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "moment": "2.24.0",
     "nuxt": "2.11.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxtjs/style-resources": "^1.0.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0"
+  }
 }
