--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free": "^5.12.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "@nuxtjs/axios": "5.9.0",
     "@nuxtjs/bulma": "1.2.6",
+    "bulma-helpers": "^0.3.8",
     "frontmatter-markdown-loader": "3.1.0",
     "moment": "2.24.0",
-    "nuxt": "2.11.0"
+    "nuxt": "2.11.0",
+    "nuxt-fontawesome": "^0.4.0"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.0.0",
