--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "frontmatter-markdown-loader": "3.1.0",
     "moment": "2.24.0",
     "nuxt": "2.11.0",
-    "nuxt-fontawesome": "^0.4.0"
+    "nuxt-fontawesome": "^0.4.0",
+    "prismjs": "^1.17.1"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.0.0",
