--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "2.24.0",
     "nuxt": "2.11.0",
     "nuxt-fontawesome": "0.4.0",
+    "nuxt-social-meta": "^0.0.1",
     "prismjs": "1.19.0"
   },
   "devDependencies": {
