--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   "devDependencies": {
     "@nuxtjs/style-resources": "1.0.0",
     "node-sass": "4.13.1",
-    "sass-loader": "8.0.2",
-    "vue-scroll-indicator": "0.1.3"
+    "sass-loader": "8.0.2"
   }
 }
