--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "@nuxtjs/bulma": "1.2.7",
     "bulma-helpers": "0.3.12",
     "frontmatter-markdown-loader": "3.6.0",
-    "moment": "2.27.0",
-    "nuxt": "2.13.3",
+    "moment": "^2.29.4",
+    "nuxt": "^2.17.0",
     "nuxt-fontawesome": "0.4.0",
-    "prismjs": "1.20.0"
+    "prismjs": "^1.29.0"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "1.0.0",
-    "node-sass": "4.14.1",
-    "sass-loader": "8.0.2",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^10.4.1",
     "vue-scroll-indicator": "0.1.3"
   }
 }
