--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@fortawesome/free-brands-svg-icons": "5.13.1",
     "@fortawesome/free-solid-svg-icons": "5.13.1",
     "@fortawesome/vue-fontawesome": "0.1.10",
-    "@nuxtjs/axios": "5.11.0",
-    "@nuxtjs/bulma": "1.2.7",
-    "bulma-helpers": "0.3.12",
-    "frontmatter-markdown-loader": "3.6.0",
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/bulma": "^1.3.0",
+    "bulma-helpers": "^0.4.3",
+    "frontmatter-markdown-loader": "^3.7.0",
     "moment": "^2.29.4",
     "nuxt": "^2.17.0",
     "nuxt-fontawesome": "0.4.0",
